# project

./: Dockerfile  README.md  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: chat_data.py  export.py  upload.py
app/crud/: project.py
app/frontend/templates/: index.html
app/frontend/templates/static/js/: app.js
app/models/: database.py  models.py
app/schema/: schemas.py
app/utils/: handler_excel.py  logger.py
